--- a/views/home.pug
+++ b/views/home.pug
@@ -6,9 +6,8 @@ block content
     setTimeout(() => { window.location.reload() }, #{interval})
   h1 1 USDT = #{exchangeRate} INR
   p.lead Arbitrage opportunities Binance & WazirX
-  hr
   each currency in crypto
-    .row
+    .row.border-top.pt-2
       .col-sm-4
         p #{currency}/USDT
         h2 #{arbitrage[currency].USDT}
